# turtlebot3-bezier-navigation

./: CMakeLists.txt  README.md  package.xml
launch/: assignment_launch.py
scripts/: launch_rviz.sh  run_and_plot.sh
src/: controller.cpp  path_planner.cpp  plot_data.py  trajectory_generator.cpp
